# protocol-parser

./: .gitignore  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  README_SIGNALING.md  build.bat  build_msys2.sh  org_design_doc.md
.claude/: settings.local.json
.qoder/repowiki/zh/content/: AI协议检测器.md  AI增强协议检测.md  MQTT协议解析器.md  WebSocket协议解析器.md  gRPC协议解析器.md  安全协议深度检测器.md  工业协议安全分析.md  工业协议深度分析器.md  快速入门指南.md  故障排除与调试.md  现代应用协议解析.md  现代应用协议解析器.md  综合示例程序详解.md  贡献指南.md  项目概述.md
.qoder/repowiki/zh/content/API参考文档/: API参考文档.md  BaseParser API参考.md  BufferView API参考.md  协议识别引擎API参考.md  性能监控API参考.md  流量统计API参考.md
.qoder/repowiki/zh/content/协议解析器参考/: 协议解析器参考.md
.qoder/repowiki/zh/content/协议解析器参考/传输层解析器/: SCTP解析器.md  TCP解析器.md  UDP解析器.md  传输层解析器.md
.qoder/repowiki/zh/content/协议解析器参考/应用层解析器/: DHCP解析器.md  DNS解析器.md  FTP解析器.md  HTTPS解析器.md  HTTP解析器.md  SMTP解析器.md  应用层解析器.md
.qoder/repowiki/zh/content/协议解析器参考/数据链路层解析器/: ARP解析器.md  Ethernet解析器.md  数据链路层解析器.md
.qoder/repowiki/zh/content/协议解析器参考/网络层解析器/: ICMP解析器.md  IPv4解析器.md  IPv6解析器.md  网络层解析器.md
.qoder/repowiki/zh/content/扩展开发指南/: 协议解析器扩展指南.md  扩展开发指南.md  统计系统扩展指南.md
.qoder/repowiki/zh/content/核心组件详解/: BufferView设计与使用.md  协议识别引擎.md  性能监控模块.md  核心组件详解.md  流量统计系统.md  解析器基类架构.md
.qoder/repowiki/zh/content/示例程序详解/: 实时数据包捕获示例详解.md  性能基准测试示例详解.md  示例程序详解.md  高级流量分析示例详解.md
.qoder/repowiki/zh/content/高级功能/: SIMD性能优化.md  智能协议识别.md  线程安全与并发模型.md  零拷贝设计.md  高级功能.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
doc/: 常见协议结构.md  性能优化指南.md  技术选型.md  架构设计.md
examples/: CMakeLists.txt  advanced_analyzer_demo.cpp  advanced_features_demo.cpp  comprehensive_demo.cpp  live_capture.cpp  modern_live_capture.cpp  performance_benchmark.cpp  sota_live_capture.cpp  wireshark_style_gui.cpp
include/ai/: protocol_detector.hpp
include/core/: buffer_pool.hpp  buffer_view.hpp  tcp_reassembler.hpp
include/detection/: protocol_detection.hpp  protocol_detector.hpp
include/monitoring/: performance_monitor.hpp
include/parsers/: base_parser.hpp  ethernet_parser.hpp  ipv6_parser.hpp  sctp_parser.hpp  udp_parser.hpp
include/parsers/application/: dhcp_parser.hpp  dns_parser.hpp  ftp_parser.hpp  grpc_parser.hpp  http_parser.hpp  https_parser.hpp  mqtt_parser.hpp  pop3_parser.hpp  sip_parser.hpp  snmp_parser.hpp  ssh_parser.hpp  telnet_parser.hpp  websocket_parser.hpp
include/parsers/datalink/: arp_parser.hpp
include/parsers/industrial/: dnp3_deep_analyzer.hpp  modbus_deep_analyzer.hpp
include/parsers/network/: icmp_parser.hpp  icmpv6_parser.hpp  ipv4_parser.hpp  ipv6_parser.hpp
include/parsers/security/: ipsec_deep_analyzer.hpp  tls_deep_inspector.hpp
include/parsers/signaling/: diameter_parser.hpp  gtppv2_parser.hpp  h323_parser.hpp  m3ua_parser.hpp  ngap_parser.hpp  radius_parser.hpp  s1ap_parser.hpp  x2ap_parser.hpp
include/parsers/transport/: quic_parser.hpp  rtp_parser.hpp  tcp_parser.hpp
include/statistics/: traffic_statistics.hpp
include/utils/: network_utils.hpp  simd_utils.hpp
src/: CMakeLists.txt
src/ai/: protocol_detector.cpp
src/core/: buffer_pool.cpp  buffer_view.cpp  tcp_reassembler.cpp
src/datalink/include/: arp_packet.hpp  datalink.hpp  ethernet_frame.hpp  vlan_tag.hpp
src/datalink/src/: arp_packet.cpp  datalink.cpp  ethernet_frame.cpp  vlan_tag.cpp
src/detection/: protocol_detection.cpp  protocol_detector.cpp
src/monitoring/: performance_monitor.cpp
src/parsers/: arp_parser.cpp  base_parser.cpp  ethernet_parser.cpp  icmp_parser.cpp  icmpv6_parser.cpp  ipv4_parser.cpp  ipv6_parser.cpp  sctp_parser.cpp  tcp_parser.cpp  udp_parser.cpp
src/parsers/application/: dhcp_parser.cpp  dns_parser.cpp  ftp_parser.cpp  grpc_parser.cpp  http_parser.cpp  https_parser.cpp  mqtt_parser.cpp  pop3_parser.cpp  sip_parser.cpp  snmp_parser.cpp  ssh_parser.cpp  telnet_parser.cpp  websocket_parser.cpp
src/parsers/datalink/: arp_parser.cpp  ethernet_parser.cpp
src/parsers/industrial/: dnp3_deep_analyzer.cpp  modbus_deep_analyzer.cpp
src/parsers/network/: icmp_parser.cpp  icmpv6_parser.cpp  ipv4_parser.cpp  ipv6_parser.cpp
src/parsers/security/: tls_deep_inspector.cpp
src/parsers/signaling/: diameter_parser.cpp  gtppv2_parser.cpp  h323_parser.cpp  m3ua_parser.cpp  ngap_parser.cpp  radius_parser.cpp  s1ap_parser.cpp  x2ap_parser.cpp
src/parsers/transport/: quic_parser.cpp  rtp_parser.cpp  sctp_parser.cpp  tcp_parser.cpp  udp_parser.cpp
src/statistics/: traffic_statistics.cpp
src/utils/: network_utils.cpp  simd_utils.cpp
